# task_flow

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml
docs/architecture/: .$architecture.drawio.bkp  architecture.drawio
docs/architecture/api/: api.yaml
docs/architecture/db/: dbdiagram.txt  task_flow.sql
docs/architecture/requirements/: functional  load_calculating.txt  non_functional
logger/: config.py  logging.conf
src/infrastructure/: configuration.py
src/presentation/dtos/: models.py
tests/: __init__.py
