[project]
authors = [{ name = "Kornilov D.A", email = "dimitra4@mail.ru" }]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: LLC EDGECENTER",
]
name = "task-flow"
version = "0.1.0"
description = "API для управления задачами"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pydantic==2.13.4",
    "ruff==0.15.17",
]

[tool.ruff]
# ============================
# Общие настройки Ruff
# ============================
preview = false
# Включение экспериментальных возможностей (нестабильные правила и фиксы).
# Для замены аннотаций через pyupgrade preview не требуется,
# но если хотите новые преобразования (UP040, UP041) – установите true.

fix = true
# Автоматически исправлять ошибки, которые можно исправить (в т.ч. замену аннотаций).

force-exclude = true
# Применять правила исключения (exclude) даже к файлам, переданным явно в командной строке.

target-version = "py313"
# Целевая версия Python. Определяет, до какого синтаксиса обновлять код.
# Для Python 3.13 ruff будет менять List → list, Union → |, Type → type и т.д.

line-length = 88
# Максимальная длина строки (по умолчанию 88, как в Black).

[tool.ruff.format]
# ============================
# Настройки форматирования кода
# ============================
docstring-code-format = true
# Форматировать код внутри docstring (например, примеры в reST или Google-style).

docstring-code-line-length = 88
# Длина строки для кода внутри docstring.

line-ending = "lf"
# Принудительно использовать LF (Unix) вместо CRLF (Windows).

[tool.ruff.lint]
# ============================
# Настройки линтера
# ============================
select = [
    # --- Правила для замены старых аннотаций (уже входят в UP) ---
    "UP",     # pyupgrade – все правила для обновления синтаксиса до целевой версии Python
    # В частности, подменяют аннотации:
    # UP006 – замена List, Dict, Tuple, Set, FrozenSet, Type на встроенные list, dict и т.д.
    # UP007 – замена Union[X, Y] на X | Y и Optional[X] на X | None
    # UP035 – удаление устаревших импортов из typing (например, List, Dict)
    # UP038 – замена isinstance(..., (X, Y)) на isinstance(..., X | Y)
    # UP040 – преобразование TypeVar в синтаксис PEP 695 (при preview=true)

    # --- Остальные полезные правила ---
    "A",      # flake8-builtins – запрет переопределения встроенных имён
    "B",      # flake8-bugbear – ловит распространённые ошибки
    "C4",     # flake8-comprehensions – упрощает генераторы списков/словарей
    "C90",    # mccabe – проверка цикломатической сложности
    "COM",    # flake8-commas – проверка запятых в коллекциях
    "D",      # pydocstyle – проверка docstring
    "DTZ",    # flake8-datetimez – запрет наивных datetime
    "E",      # pycodestyle – ошибки стиля (пробелы, отступы)
    "ERA",    # flake8-eradicate – поиск закомментированного кода
    "EXE",    # flake8-executable – проверка shebang и прав на выполнение
    "F",      # pyflakes – базовые ошибки (неиспользуемые импорты/переменные)
    "FBT",    # flake8-boolean-trap – запрет булевых аргументов без пояснения
    "FLY",    # flynt – замена f-строк там, где это возможно
    "FURB",   # refurb – рекомендации по улучшению кода
    "G",      # flake8-logging-format – корректное форматирование логов
    "I",      # isort – сортировка импортов
    "ICN",    # flake8-import-conventions – канонические имена импортов (import pandas as pd)
    "ISC",    # flake8-implicit-str-concat – предупреждения о неявной конкатенации строк
    "LOG",    # flake8-logging – правильное использование логирования
    "N",      # pep8-naming – проверка именования (функции, классы, константы)
    "PERF",   # perflint – оптимизация производительности
    "PIE",    # flake8-pie – полезные улучшения (например, замена вхолостую вызовов)
    "PL",     # pylint – дублирует некоторые правила pylint
    "PT",     # flake8-pytest-style – стиль написания pytest
    "PTH",    # flake8-use-pathlib – замена os.path на pathlib
    "Q",      # flake8-quotes – единый стиль кавычек
    "RET",    # flake8-return – проверка возвращаемых значений (неявный None)
    "RSE",    # flake8-raise – правила для raise (переподнимание исключений)
    "RUF",    # специфичные правила ruff (например, RUF012 – изменяемые атрибуты классов)
    "S",      # flake8-bandit – проверки безопасности
    "SIM",    # flake8-simplify – упрощение выражений (включение в if, составные условия)
    "SLF",    # flake8-self – обращение к защищённым членам (self._x)
    "SLOT",   # flake8-slots – рекомендации по использованию __slots__
    "T100",   # flake8-debugger – запрет отладочных вызовов типа ipdb.set_trace()
    "TRY",    # tryceratops – лучшие практики обработки исключений
    "W",      # pycodestyle – предупреждения о пробелах и отступах
    "YTT",    # flake8-2020 – предупреждения для Python 2->3 миграции
    "FAST",   # специфичные для FastAPI правила (например, проверка зависимостей)
    "T20",    # flake8-print – запрет print() (кроме отладки)
    "BLE",    # flake8-blind-except – запрет голого except:
    "T10",    # flake8-debugger – дубль T100, но оставлен для совместимости
    "ASYNC",  # flake8-async – проверки асинхронного кода
    "INP",    # flake8-no-pep420 – запрет неявных пространств имён (PEP 420)
    "TD",     # flake8-todos – проверка TODO-комментариев (например, без ссылки на issue)
]

ignore = [
    "S104",   # возможный биндинг на все интерфейсы (0.0.0.0) – часто нужно для Docker
    "COM812", # висячая запятая – конфликтует с автоформатированием ruff format
    "D100",   # отсутствует docstring на уровне модуля (не всегда нужно)
    "D101",   # отсутствует docstring у публичного класса
    "D102",   # отсутствует docstring у публичного метода
    "D103",   # отсутствует docstring у публичной функции
    "D104",   # отсутствует docstring у публичного пакета (__init__.py)
    "D105",   # отсутствует docstring у магического метода (__str__, __len__)
    "D106",   # отсутствует docstring у публичного вложенного класса
    "D107",   # отсутствует docstring у __init__
    "D203",   # неправильный отступ перед классом – орфанное правило pydocstyle
    "RUF001", # неоднозначный символ в строке (например, "а" вместо "a") – слишком строго
    "RUF002", # неоднозначный символ в docstring
    "RUF003", # неоднозначный символ в комментарии
    "ISC003", # явная конкатенация строк (лучше оставить для читаемости)
    "PLR09",  # слишком много локальных переменных (нестабильное правило)
    "PLR6301",# метод не использует self – не требует переделки в staticmethod всегда
    "TRY003", # длинное сообщение исключения вне класса – часто бывает удобно
]

exclude = ["init.py"]
# Файлы и директории, которые ruff не проверяет.

external = ["WPS"]
# Внешние линтеры, которые не входят в стандартный набор ruff (например, wemake-python-styleguide).

[tool.ruff.lint.per-file-ignores]
# ============================
# Игнорирование правил для конкретных файлов
# ============================
"tests/**.py" = [
    "S101",   # использование assert – в тестах разрешено
    "S105",   # хардкод пароля – в тестах допустимо
    "S404",   # вызов subprocess – для тестов интеграции нужно
    "S603",   # shell=True – тесты могут требовать
    "S607",   # относительный путь к исполняемому файлу – тесты часто используют
    "RUF012", # изменяемый атрибут класса – в фикстурах и моках бывает полезен
    "SLF001", # доступ к защищённому члену – тесты часто проверяют внутреннее состояние
    "N806",   # переменная в функции в верхнем регистре – иногда нужно для констант внутри теста
    "S106",   # хардкод пароля (ещё один)
    "S324",   # небезопасная хэш-функция – тесты могут использовать md5 для фикстур
]

[tool.ruff.lint.pydocstyle]
# ============================
# Настройки pydocstyle
# ============================
convention = "pep257"
# Использовать соглашение PEP 257 (стандарт для docstring).

[tool.ruff.lint.mccabe]
# ============================
# Цикломатическая сложность (правило C90)
# ============================
max-complexity = 6
# Максимально допустимая сложность функции (6 – довольно строго, способствует декомпозиции).

[tool.ruff.lint.flake8-pytest-style]
# ============================
# Стиль pytest
# ============================
parametrize-values-type = "tuple"
# Ожидать, что значения в @pytest.mark.parametrize передаются кортежем, а не списком.

[tool.ruff.lint.flake8-bugbear]
# ============================
# Дополнительные неизменяемые вызовы (правило B008)
# ============================
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]
# Эти вызовы считаются неизменяемыми, поэтому их можно использовать как аргументы по умолчанию
# без предупреждения B008 (не изменяйте изменяемые аргументы по умолчанию).

[tool.ruff.lint.isort]
# ============================
# Сортировка импортов
# ============================
section-order = [
    "future",           # from __future__ import ...
    "standard-library", # встроенные модули Python
    "fastapi",          # FastAPI как отдельная секция
    "third-party",      # внешние библиотеки (requests, numpy)
    "first-party",      # модули вашего проекта
    "local-folder",     # относительные импорты (.foo)
]
# Порядок следования секций при сортировке импортов.

lines-after-imports = 2
# Количество пустых строк после блока импортов.

[tool.ruff.lint.isort.sections]
# ============================
# Кастомные секции isort
# ============================
"fastapi" = ["FastAPI"]
# Все импорты, которые начинаются с "FastAPI", попадают в секцию "fastapi".

[tool.mypy]
# ============================
# Общие настройки mypy
# ============================
python_version = "3.13"
# Целевая версия Python.

strict = true
# Включает набор строгих проверок (check-untyped-defs, disallow-incomplete-defs, disallow-untyped-defs, no-implicit-optional, warn-redundant-casts, warn-unused-ignores, warn-return-any, warn-unreachable).

explicit_package_bases = true
# Явное определение корневых пакетов для правильного разрешения импортов.

plugins = ["pydantic.mypy"]
# Плагин для корректной типизации Pydantic.

exclude = ["tests/", "venv/"]
# Директории, исключённые из проверки.

# ============================
# Повышение строгости (дополнительные флаги)
# ============================
ignore_missing_imports = false
# Не игнорировать отсутствие stub-файлов.

implicit_reexport = false
# Запрещает неявный реэкспорт (требует явного указания в __all__).

local_partial_types = false
# Запрещает частичный вывод типов (например, x: list = [] – ошибка, требуется list[int]).

warn_return_any = true
# Предупреждать, если функция возвращает Any.

warn_unused_configs = true
# Предупреждать о неиспользуемых опциях в конфигурации.

strict_equality = true
# Запрещает заведомо неверные сравнения (например, int == str).

no_implicit_optional = true
# Требует явного Optional для параметров со значением None по умолчанию.

warn_unused_ignores = true
# Предупреждать о бесполезных комментариях # type: ignore.

warn_redundant_casts = true
# Предупреждать о лишних приведениях cast().

disallow_any_unimported = true
# Запрещает импорт Any из неаннотированных модулей без явного указания.

# ============================
# Дополнительные коды ошибок
# ============================
enable_error_code = [
    "truthy-bool",          # некорректное поведение в логическом контексте
    "truthy-iterable",      # аналогично для итерируемых объектов
    "redundant-expr",       # избыточные выражения (True and x)
    "unused-awaitable",     # awaitable-объект не используется (забыт await)
    "possibly-undefined",   # переменная может быть не определена в некоторых ветках
    "redundant-self",       # метод не использует self (можно staticmethod)
    "unimported-reveal",    # reveal_type должен быть импортирован из typing
    "deprecated",           # использование устаревших типов (Iterable вместо Collection)
    "assignment",           # проверка совместимости типов при присваивании
    "method-assign",        # переопределение метода с несовместимой сигнатурой
    "operator",             # применение оператора к неподдерживаемому типу
    "ignore-without-code",  # # type: ignore без указания кода ошибки
]

# ============================
# Отключение кодов ошибок (disable_error_code)
# ============================
disable_error_code = []
# Не отключать никакие ошибки.
